--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 		<div class="contentWrapper contentWrapper--moreSpacing">
 			<div class="headerSection-avatar"></div>
 			<h1 class="headerSection-title">Andreas Fransson</h1>
-			<h2 class="headerSection-subtitle">Web Developer &bull; Stockholm, SE</h2>
+			<h2 class="headerSection-subtitle">Web Developer &bull; Stockholm Sweden</h2>
 		</div>
 	</header>
 
